--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- QRCode Library -->
+    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
     <script>
         // Tailwind CSS configuration remains here for CDN build process
         tailwind.config = {
@@ -78,6 +80,9 @@
                 </button>
                 <button class="tab-btn px-6 py-3 font-medium text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400" data-tab="image-tools">
                     <i class="fas fa-image mr-2"></i>Image Tools
+                </button>
+                <button class="tab-btn px-6 py-3 font-medium text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400" data-tab="qr-generator">
+                    <i class="fas fa-qrcode mr-2"></i>Generate QR
                 </button>
                 <button class="tab-btn px-6 py-3 font-medium text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400" data-tab="settings">
                     <i class="fas fa-cog mr-2"></i>Settings
@@ -298,7 +303,17 @@
                         <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6">
                             <div class="flex justify-between items-center mb-4">
                                 <h2 class="text-xl font-semibold">Preview</h2>
-                                <div class="flex space-x-2">
+                                
+<div class="flex space-x-2 mt-4">
+    <button id="clear-screen" class="px-4 py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-lg transition-colors">
+        Clear Screen
+    </button>
+    <button id="reset-image" class="px-4 py-2 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg transition-colors hidden">
+        Reset
+    </button>
+</div>                        
+
+                              <div class="flex space-x-2">
                                     <button id="compare-toggle" class="px-3 py-1 bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 rounded-lg text-sm transition-colors hidden">
                                         <i class="fas fa-columns mr-1"></i>Compare
                                     </button>
@@ -314,7 +329,7 @@
                                     <button id="zoom-fit" class="px-3 py-1 bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 rounded-lg text-sm transition-colors">
                                         <i class="fas fa-expand"></i>
                                     </button>
-                                </div>
+                               </div>
                             </div>
                             <div id="image-preview-container" class="min-h-[300px] flex items-center justify-center border-2 border-dashed border-gray-300 dark:border-gray-600 rounded-lg overflow-hidden relative">
                                 <div class="text-center text-gray-500 dark:text-gray-400">
@@ -327,6 +342,57 @@
                             <div id="tool-controls" class="mt-6 space-y-4">
                                 <!-- All image tool controls remain the same -->
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- QR Generator Tab -->
+            <div id="qr-generator-tab" class="tab-panel hidden">
+                <div class="h-full flex gap-6">
+                    <div class="w-1/3 bg-white dark:bg-gray-800 rounded-lg shadow-md p-4">
+                        <h1 class="text-2xl font-bold mb-4">QR Code Generator</h1>
+                        <div class="space-y-4">
+                            <div>
+                                <label class="block text-sm font-medium mb-1">Text or URL</label>
+                                <textarea
+                                    id="qr-text-input"
+                                    class="w-full p-2 border border-gray-300 dark:border-gray-600 rounded-md bg-gray-100 dark:bg-gray-700"
+                                    rows="4"
+                                    placeholder="Enter text here"
+                                ></textarea>
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium mb-1">Size</label>
+                                <input 
+                                    type="range"
+                                    id="qr-size-slider"
+                                    min="128" max="512" step="64"
+                                    value="256"
+                                    class="w-full"
+                                />
+                                <p class="text-center text-xs" id="qr-size-value">256px</p>
+                            </div>
+                            <div class="flex gap-4">
+                                <div class="flex-1">
+                                    <label class="block text-sm font-medium mb-1">Dark Color</label>
+                                    <input type="color" id="qr-dark-color" value="#000000" class="w-full p-1 h-10 border-none rounded" />
+                                </div>
+                                <div class="flex-1">
+                                    <label class="block text-sm font-medium mb-1">Light Color</label>
+                                    <input type="color" id="qr-light-color" value="#ffffff" class="w-full p-1 h-10 border-none rounded" />
+                                </div>
+                            </div>
+                            <div class="flex gap-2">
+                                <button id="download-qr-png" class="flex-1 px-4 py-2 bg-green-600 text-white rounded-md hover:bg-green-700">Download PNG</button>
+                                <button id="download-qr-svg" class="flex-1 px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700">Download SVG</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex-1 bg-white dark:bg-gray-800 rounded-lg shadow-md p-4 flex items-center justify-center" id="qr-preview">
+                        <div class="text-center text-gray-400">
+                            <i class="fas fa-qrcode text-8xl mb-4"></i>
+                            <p>Your QR Code will appear here.</p>
                         </div>
                     </div>
                 </div>
@@ -462,5 +528,6 @@
     <div id="notification-container" class="fixed bottom-4 right-4 z-50"></div>
 
     <script src="js/app.js"></script>
+    <script src="js/qr.js"></script>
 </body>
 </html>
