--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- QRCode Library -->
     <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
+    <!-- Cropper.js Library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
     <script>
         // Tailwind CSS configuration remains here for CDN build process
         tailwind.config = {
@@ -75,10 +78,10 @@
         <!-- Tab Navigation -->
         <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md mb-6">
             <div class="flex flex-wrap border-b border-gray-200 dark:border-gray-700">
-                <button class="tab-btn px-6 py-3 font-medium text-indigo-600 dark:text-indigo-400 border-b-2 border-indigo-600 dark:border-indigo-400" data-tab="notepad">
+                <button class="tab-btn px-6 py-3 font-medium text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400" data-tab="notepad">
                     <i class="fas fa-sticky-note mr-2"></i>Notepad
                 </button>
-                <button class="tab-btn px-6 py-3 font-medium text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400" data-tab="image-tools">
+                <button class="tab-btn px-6 py-3 font-medium text-indigo-600 dark:text-indigo-400 border-b-2 border-indigo-600 dark:border-indigo-400" data-tab="image-tools">
                     <i class="fas fa-image mr-2"></i>Image Tools
                 </button>
                 <button class="tab-btn px-6 py-3 font-medium text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400" data-tab="qr-generator">
@@ -93,7 +96,7 @@
         <!-- Tab Content -->
         <div class="tab-content">
             <!-- Notepad Tab -->
-            <div id="notepad-tab" class="tab-panel">
+            <div id="notepad-tab" class="tab-panel hidden">
                 <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6">
                     <!-- Note Management UI -->
                     <div id="note-management" class="mb-4 flex items-center gap-4 border-b border-gray-200 dark:border-gray-700 pb-4">
@@ -143,7 +146,6 @@
                             <span class="tooltip-text">Justify</span>
                         </button>
                         <div class="border-l border-gray-300 dark:border-gray-600 mx-2"></div>
-                        <!-- The 4 problematic buttons have been removed from here -->
                         <select class="editor-select px-3 py-1 rounded bg-gray-200 dark:bg-gray-700" id="font-size">
                             <option value="1">Small</option>
                             <option value="3" selected>Normal</option>
@@ -238,7 +240,7 @@
             </div>
 
             <!-- Image Tools Tab -->
-            <div id="image-tools-tab" class="tab-panel hidden">
+            <div id="image-tools-tab" class="tab-panel">
                 <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
                     <!-- Image Tools Sidebar -->
                     <div class="lg:col-span-1">
@@ -256,6 +258,9 @@
                                 </button>
                                 <button id="convert-tool" class="image-tool-btn w-full text-left px-4 py-3 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-indigo-100 dark:hover:bg-gray-600 transition-colors">
                                     <i class="fas fa-exchange-alt mr-2"></i>Convert
+                                </button>
+                                <button id="crop-tool" class="image-tool-btn w-full text-left px-4 py-3 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-indigo-100 dark:hover:bg-gray-600 transition-colors">
+                                    <i class="fas fa-crop mr-2"></i>Crop
                                 </button>
                                 <button id="watermark-tool" class="image-tool-btn w-full text-left px-4 py-3 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-indigo-100 dark:hover:bg-gray-600 transition-colors">
                                     <i class="fas fa-tint mr-2"></i>Watermark
@@ -304,16 +309,16 @@
                             <div class="flex justify-between items-center mb-4">
                                 <h2 class="text-xl font-semibold">Preview</h2>
                                 
-<div class="flex space-x-2 mt-4">
-    <button id="clear-screen" class="px-4 py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-lg transition-colors">
-        Clear Screen
-    </button>
-    <button id="reset-image" class="px-4 py-2 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg transition-colors hidden">
-        Reset
-    </button>
-</div>                        
+                                <div class="flex space-x-2 mt-4">
+                                    <button id="clear-screen" class="px-4 py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-lg transition-colors">
+                                        Clear Screen
+                                    </button>
+                                    <button id="reset-image" class="px-4 py-2 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg transition-colors hidden">
+                                        Reset
+                                    </button>
+                                </div>                        
 
-                              <div class="flex space-x-2">
+                                <div class="flex space-x-2">
                                     <button id="compare-toggle" class="px-3 py-1 bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 rounded-lg text-sm transition-colors hidden">
                                         <i class="fas fa-columns mr-1"></i>Compare
                                     </button>
@@ -329,7 +334,7 @@
                                     <button id="zoom-fit" class="px-3 py-1 bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 rounded-lg text-sm transition-colors">
                                         <i class="fas fa-expand"></i>
                                     </button>
-                               </div>
+                                </div>
                             </div>
                             <div id="image-preview-container" class="min-h-[300px] flex items-center justify-center border-2 border-dashed border-gray-300 dark:border-gray-600 rounded-lg overflow-hidden relative">
                                 <div class="text-center text-gray-500 dark:text-gray-400">
