--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multi-Tool Web App - Enhanced</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- QRCode Library -->
-    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
-    <!-- Cropper.js Library -->
+    
+<!-- QRCode Library -->
+<script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
+  
+ <!-- Cropper.js Library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
-    <script>
-        // Tailwind CSS configuration remains here for CDN build process
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
+
+
+<!-- Link to your local jspdf file -->
+   <!-- <script src="js/jspdf.umd.min.js"></script> -->
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+<script>
+       // Tailwind CSS configuration remains here for CDN build process
         tailwind.config = {
             darkMode: 'class',
             theme: {
@@ -44,7 +53,8 @@
                 }
             }
         }
-    </script>
+</script>
+
 </head>
 <body class="h-full bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
     <!-- Header -->
@@ -531,8 +541,9 @@
 
     <!-- Notification Container -->
     <div id="notification-container" class="fixed bottom-4 right-4 z-50"></div>
+    
 
-    <script src="js/app.js"></script>
-    <script src="js/qr.js"></script>
+<script src="js/app.js"></script>
+       <script src="js/qr.js"></script>
 </body>
 </html>
