--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <title>Multi-Tool Web App</title>
     
     <!-- PWA Manifest -->
-    <link rel="manifest" href="/manifest.json">
+    <!-- <link rel="manifest" href="/manifest.json"> -->
+    <link rel="manifest" href="manifest.json">
     
     <!-- Favicons -->
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-32x32.png">
@@ -850,3 +851,4 @@
 <script src="js/core/init.js"></script>
 </body>
 </html>
+
