--- a/index.html
+++ b/index.html
@@ -705,7 +705,8 @@
     // Register Service Worker
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-            navigator.serviceWorker.register('/service-worker.js')
+            <!-- navigator.serviceWorker.register('/service-worker.js') -->
+                navigator.serviceWorker.register("service-worker.js");
                 .then(registration => {
                     console.log('✅ Service Worker registered successfully:', registration.scope);
                     
@@ -851,5 +852,6 @@
 <script src="js/core/init.js"></script>
 </body>
 </html>
+
 
 
