--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="h-full">
 <head>
     <meta charset="UTF-8">
+    <base href="./">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- PWA Meta Tags -->
@@ -852,6 +853,7 @@
 <script src="js/core/init.js"></script>
 </body>
 </html>
+
 
 
 
